[Front][Fix] - Attempt #2 to fix card flip on iOS devices

--- a/mantra-frontend/src/app/pages/study/study.component.css
+++ b/mantra-frontend/src/app/pages/study/study.component.css
@@ -32,7 +32,7 @@
     height: 400px;
     position: relative;
     transform-style: preserve-3d;
-    -webkit-transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d !important;
     cursor: pointer;
     margin: 0 auto;
     z-index: 2 ;
@@ -43,7 +43,7 @@
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
+    -webkit-backface-visibility: hidden !important;
     border-radius: 16px;
     display: flex;
     justify-content: center;
